# PROYECTO2_PARALELA

./: CMakeLists.txt  DLB.cpp  FuerzaBruta.c  FuerzaBruta.cpp  OpenMP.cpp  README.md  main.cpp  texto.txt
